[package]
name = "yagbas"
description = "Yagbas is a programming language that builds programs for the Game Boy."
repository = "https://github.com/Lokathor/yagbas"
homepage = "https://lokathor.github.io/yagbas/"
version = "0.1.0"
edition = "2024"
license = "Zlib OR Apache-2.0 OR MIT"

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
lto = true

[dependencies]
