[package]
name = "yagbas"
description = "Yagbas is a programming language that builds programs for the Game Boy."
repository = "https://github.com/Lokathor/yagbas"
homepage = "https://lokathor.github.io/yagbas/"
version = "0.2.0"
edition = "2024"
license = "Zlib OR Apache-2.0 OR MIT"

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
lto = true

[dependencies]
ariadne = "0.6.0"
bimap = "0.6.3"
chumsky = { version = "0.12", features = ["pratt"] }
clap = { version = "4.5.47", features = ["derive"] }
derive_more = { version = "2.0.1", features = ["display"] }
fnv = "1.0.7"
internal_iterator_rec = "0.1.1"
logos = { version = "0.15.1", features = ["forbid_unsafe"] }
rayon = { version = "1.11.0", optional = true }
str_id = "0.1.1"

[features]
default = ["rayon"]
rayon = ["dep:rayon"]
