[package]
name = "yagbas_irtypes"
description = "Internal Representation types for yagbas."
repository = "https://github.com/Lokathor/yagbas"
license = "Zlib OR Apache-2.0 OR MIT"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"

[dependencies]
yagbas_asttypes = { version = "0.1.0", path = "../yagbas_asttypes" }
