[package]
name = "yagbas_srcfiletypes"
description = "types for reading in yagbas source files"
license = "Zlib OR Apache-2.0 OR MIT"
repository = "https://github.com/Lokathor/yagbas"
version = "0.2.0"
edition = "2024"
rust-version = "1.85"

[dependencies]
ariadne = "0.5.1"
bimap = "0.6.3"
chumsky = { version = "0.10.1", features = ["pratt"] }
fnv = "1.0.7"
logos = { version = "0.15.0", features = ["forbid_unsafe"] }
